force-app/main/default/objects/Opportunity_Matching_Threshold__mdt/Opportunity_Matching_Threshold__mdt.object-meta.xml
<CustomObject>
    <description>Used by the OpportunityMatchListController Apex class. This CMDT establishes a minimum threshold percent of fields that must be matched by a particular Opportunity to be considered a &apos;match&apos; for the original Opportunity. Differs per Business Unit.</description>
    <label>Opportunity Matching / Scoring</label>
    <pluralLabel>Opportunity Matching / Scoring</pluralLabel>
</CustomObject>