force-app/main/default/objects/Opportunity_Matching_Threshold__mdt/fields/Matching_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Matching_Threshold__c</fullName>
    <label>Matching Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>