force-app/main/default/objects/Opportunity_Matching_Threshold__mdt/fields/Questions_Required__c.field-meta.xml
<CustomField>
    <fullName>Questions_Required__c</fullName>
    <description>How many questions must be filled in for an Opportunity to be scored?</description>
    <inlineHelpText>How many questions must be filled in for an Opportunity to be scored?</inlineHelpText>
    <label># Questions Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>