force-app/main/default/objects/Opportunity_Matching_Threshold__mdt/fields/Record_Type__c.field-meta.xml
<CustomField>
    <fullName>Record_Type__c</fullName>
    <label>Record Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ECI_Negotiation</fullName>
                <default>true</default>
                <label>ECI / Negotiation</label>
            </value>
            <value>
                <fullName>Tender</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>