force-app/main/default/objects/Opportunity_Matching_Threshold__mdt/fields/Value_3_Score__c.field-meta.xml
<CustomField>
    <fullName>Value_3_Score__c</fullName>
    <label>Value 3 Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>